--- a/src/scss/layout/_categoria.scss
+++ b/src/scss/layout/_categoria.scss
@@ -30,7 +30,7 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
     border: 1px solid $divider-color;
     border-radius: 8px;
     overflow: hidden;
@@ -38,7 +38,7 @@
 
 .cat-main-img img {
     width: 100%;
-    height: 420px;
+    height: 400px;
     object-fit: cover;
     transition: transform .3s ease, filter .3s ease;
 }
@@ -49,7 +49,7 @@
 }
 
 .cat-main-content {
-    padding: 1rem;
+    padding: 1rem
 }
 
 .cat-main-content h1 {
@@ -59,8 +59,15 @@
     transition: color .3s ease;
 }
 
-.cat-main-content h1:hover {
-    color: $color-sec;
+.cat-main-content a:hover h1,
+.cat-item-content a:hover h2{
+    color: $color-accent;
+}
+
+.cat-main-content a,
+.cat-item-content a {
+    text-decoration: none;
+    color: inherit;
 }
 
 .cat-date {
@@ -84,18 +91,18 @@
 
 .cat-item {
     display: flex;
-    gap: 15px;
+    flex-direction: column;
+    gap: 1rem;
     border: 1px solid $divider-color;
     border-radius: 8px;
-    padding: 10px;
     background: $color-bg;
+    overflow: hidden;
 }
 
 .cat-item-img img {
-    width: 180px;
-    height: 150px;
+    width: 100%;
+    height: 100%;
     object-fit: cover;
-    border-radius: 6px;
     transition: transform .3s ease, filter .3s ease;
 }
 
@@ -104,10 +111,14 @@
     filter: brightness(.85);
 }
 
+.cat-item-content{
+    padding: 1rem;
+}
+
 .cat-item-content h2 {
     font-family: $fuente-titulos;
     margin: 0 0 4px;
-    font-size: 1.2rem;
+    font-size: 1.5rem;
     transition: color .3s ease;
 }
 
@@ -120,15 +131,29 @@
     color: $color-text;
 }
 
+.btn-leer  {
+    display: inline-block;
+    margin-top: 10px;
+    padding: 8px 14px;
+    background-color: $color-sec;   /* tu color secundario */
+    color: $color-bg !important;               /* texto claro */
+    font-size: 0.9rem;
+    text-decoration: none;
+    border-radius: 6px;
+    transition: background-color .2s ease, transform .2s ease;
+}
+
+.btn-leer:hover {
+    background-color: darken($color-sec, 10%);
+    transform: translateY(-1px);
+}
+
+
 /* RESPONSIVE */
 @media (max-width: 768px) {
     .cat-grid {
         grid-template-columns: 1fr;
     }
 
-    .cat-item-img img {
-        width: 140px;
-        height: 120px;
-    }
 }
 
