--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -51,3 +51,23 @@
 .footer-social img:hover {
     filter: brightness(0) saturate(100%) invert(16%) sepia(100%) saturate(7452%) hue-rotate(1deg) brightness(95%) contrast(122%);
 }
+
+@media (max-width: 768px) {
+    .footer-container {
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .footer-nav ul {
+        flex-direction: column;
+        gap: 12px;
+        padding: 0;
+    }
+
+    .footer-social {
+        margin-top: 15px;
+        display: flex;
+        gap: 15px;
+        justify-content: center;
+    }
+}
